--- a/logistics/css/styles.css
+++ b/logistics/css/styles.css
@@ -86,6 +86,24 @@ img {
 	float: left;
 	margin: 40px 0 0;
 }
+#logo img {
+	width: auto;
+  height: 88px;
+  position: relative;
+  top: -14px;
+}
+div#logo-text {
+    float: left;
+    line-height: 75px;
+    position: relative;
+    top: 25px;
+    padding-left: 25px;
+    font-size: 35px;
+    font-family: arial;
+    font-weight: bold;
+    color: #70C1FF;
+    text-shadow: 2px 2px 2px rgba(143,0,0,0.40);
+}
 /** navigation **/
 #navigation {
 	background-position: right top;
@@ -93,7 +111,7 @@ img {
 	height: 45px;
 	list-style: none;
 	width: 500px;
-	margin: 95px 0 0;
+	margin: 20px 0 0;
 	padding: 0 30px;
 }
 #navigation li {
