--- a/logistics/css/styles.css
+++ b/logistics/css/styles.css
@@ -99,10 +99,10 @@ div#logo-text {
     top: 25px;
     padding-left: 25px;
     font-size: 35px;
-    font-family: arial;
     font-weight: bold;
-    color: #70C1FF;
-    text-shadow: 2px 2px 2px rgba(143,0,0,0.40);
+    color: #181E23;
+    text-shadow: 2px 2px 2px rgba(143,0,0,0.4);
+    font-family: Lucida Sans Unicode;
 }
 /** navigation **/
 #navigation {
@@ -186,7 +186,7 @@ p a:hover {
 	height: 531px;
 	position: relative;
 }
-#adbox ul {
+#adbox2 ul {
 	display: inline-block;
 	list-style: none;
 	margin: 0 0 6px;
@@ -195,28 +195,28 @@ p a:hover {
 	left: 0;
 	bottom: 0;
 }
-#adbox ul li {
+#adbox2 ul li {
 	float: left;
 	background: url(../images/separator.png) no-repeat left top;
 	min-height: 110px;
 	width: 300px;
 	padding: 0 8px 0 12px;
 }
-#adbox ul li:first-child {
+#adbox2 ul li:first-child {
 	background: none;
 }
-#adbox ul li > div {
+#adbox2 ul li > div {
 	background: url(../images/bg-adbox-feature.png) no-repeat center top;
 	padding: 10px 20px 0;
 }
-#adbox ul li > div h2 {
+#adbox2 ul li > div h2 {
 	letter-spacing: 1px;
 }
-#adbox ul li > div p {
+#adbox2 ul li > div p {
 	color: #2f2203;
 	letter-spacing: 1px;
 }
-#adbox ul li > div p a {
+#adbox2 ul li > div p a {
 	color: #2f2203;
 	text-decoration: none;
 }
@@ -263,7 +263,7 @@ p a:hover {
 .blog {
 	float: right;
 	width: 290px;
-	margin: 0 10px 18px 20px;
+	margin: 69px 10px 18px 20px;
 }
 .blog h2 {
 	background-position: 0 -60px;
@@ -284,7 +284,7 @@ p a:hover {
 }
 /** features **/
 #features {
-	margin: 30px 0 12px;
+	margin: 70px 0 12px;
 }
 #features p {
 	padding: 0;
