--- a/logistics/css/styles.css
+++ b/logistics/css/styles.css
@@ -35,7 +35,7 @@ img {
 	text-transform: uppercase;
 }
 /*------------------------------ Sprites ------------------------------*/
-#navigation, #navigation li.selected a, #navigation li a:hover, .blog h2, .frame, .heading1, .heading2, #services .list li {
+#navigation, #navigation li.selected a, #navigation li a:hover, .quote h2, .blog h2, .frame, .heading1, .heading2, #services .list li {
 	background: url(../images/interface.png) no-repeat;
 }
 .box, .box > div, .box > div > div {
@@ -92,7 +92,7 @@ img {
   position: relative;
   top: -14px;
 }
-div#logo-text {
+div #logo-text {
     float: left;
     line-height: 75px;
     position: relative;
@@ -189,10 +189,9 @@ p a:hover {
 #adbox2 ul {
 	display: inline-block;
 	list-style: none;
-	margin: 0 0 6px;
+  margin: 0 0 -5px;
 	padding: 0;
 	position: absolute;
-	left: 0;
 	bottom: 0;
 }
 #adbox2 ul li {
@@ -258,6 +257,29 @@ p a:hover {
 	float: left;
 	width: 600px;
 	margin: 0 30px 0 10px;
+}
+/** quote **/
+.quote {
+  float: left;
+  width: 290px;
+  margin: -614px 10px 18px 164px;
+}
+#about .quote {
+    float: left;
+    width: 290px;
+    margin: -98px 10px 18px 164px;
+    display: block;
+}
+.quote h2 {
+  background-position: 0 -60px;
+  color: #fff;
+  font: 24px/35px 'Abel-Regular';
+  height: 35px;
+  letter-spacing: 1px;
+  width: 208px;
+  margin: 0 0 10px;
+  padding: 0 20px;
+  text-transform: uppercase;
 }
 /** blog **/
 .blog {
