--- a/logistics/css/styles.css
+++ b/logistics/css/styles.css
@@ -22,6 +22,14 @@ body {
 	width: 960px;
 	margin: 0 auto;
 }
+.area-transport {
+	width: 960px;
+	margin: -60px auto;
+}
+.area-header{
+	width: 960px;
+	margin: -17px auto;
+}
 img {
 	border: 0;
 }
@@ -35,7 +43,7 @@ img {
 	text-transform: uppercase;
 }
 /*------------------------------ Sprites ------------------------------*/
-#navigation, #navigation li.selected a, #navigation li a:hover, .quote h2, .blog h2, .frame, .heading1, .heading2, #services .list li {
+#navigation, #navigation li.selected a, #navigation li a:hover, .quote h2, .index-quote h2, .blog h2, .frame, .heading1, .heading2, #services .list li {
 	background: url(../images/interface.png) no-repeat;
 }
 .box, .box > div, .box > div > div {
@@ -175,12 +183,13 @@ h3 a:hover, p a:hover {
 p a:hover {
 	text-decoration: underline;
 }
-/** adbox **/
+/** adbox/transport **/
 #adbox {
 	background: url(../images/indexpic.jpg) no-repeat center top;
 	margin: -45px 0 30px;
-	background-size: 100%;
-	background-position-y: -195px;
+	background-position-y: -176px;
+	height: auto;
+	width: auto;
 }
 #adbox .area {
 	height: 531px;
@@ -218,6 +227,21 @@ p a:hover {
 #adbox2 ul li > div p a {
 	color: #2f2203;
 	text-decoration: none;
+}
+.transport {
+	background: url(../images/bg-adbox-feature.png) no-repeat center top;
+	display: inline-block;
+	float: left;
+	min-height: 110px;
+	width: 300px;
+  padding: 6px 10px 0;
+}
+.transport a {
+	text-decoration: none;
+	color: black;
+}
+.area-transport h2 {
+	margin: 0px 30px 6px;
 }
 /** section **/
 .section {
@@ -262,7 +286,12 @@ p a:hover {
 .quote {
   float: left;
   width: 290px;
-  margin: -614px 10px 18px 164px;
+  margin: -788px 10px 18px 164px;
+}
+.index-quote {
+  float: left;
+  width: 290px;
+  margin: -97px 16px 52px 160px;
 }
 #about .quote {
     float: left;
@@ -273,7 +302,18 @@ p a:hover {
 .quote h2 {
   background-position: 0 -60px;
   color: #fff;
-  font: 24px/35px 'Abel-Regular';
+  font: 21px/35px 'Abel-Regular';
+  height: 35px;
+  letter-spacing: 1px;
+  width: 208px;
+  margin: 0 0 10px;
+  padding: 0 20px;
+  text-transform: uppercase;
+}
+.index-quote h2 {
+  background-position: 0 -60px;
+  color: #fff;
+  font: 21px/35px 'Abel-Regular';
   height: 35px;
   letter-spacing: 1px;
   width: 208px;
@@ -329,7 +369,9 @@ p a:hover {
 }
 #features ul li img {
 	float: left;
-	margin: 6px 20px 24px 0;
+	margin: 2px 15px 24px 0;
+	border-radius: 19px;
+	border: 1.5px solid #000000;
 }
 /** About page **/
 #about p {
@@ -513,9 +555,22 @@ p a:hover {
     position: fixed;
     bottom: 0;
 }
+#quote-footer {
+    background: url(../images/bg-footer.png) repeat left top;
+    display: inline-block;
+    width: 100%;
+    padding: 7px 0;
+    position: fixed;
+    bottom: 0;
+}
 @media screen and (max-height: 710px) {
     #footer {
         display: none;
+    }
+}
+@media screen and (max-height: 855px) {
+    #quote-footer {
+        display: none !important;
     }
 }
 .divider {
@@ -528,6 +583,13 @@ p a:hover {
 	top: -31px;
 }
 #footer p {
+	color: #2f2203;
+	font: 12px/24px Arial, Helvetica, sans-serif;
+	margin: 0;
+	text-shadow: 0 1px #fff;
+	padding: 12px;
+}
+#quote-footer p {
 	color: #2f2203;
 	font: 12px/24px Arial, Helvetica, sans-serif;
 	margin: 0;
