--- a/logistics/css/styles.css
+++ b/logistics/css/styles.css
@@ -19,12 +19,18 @@ body {
 	margin: 0;
 }
 .area {
+	/*width: 960px;*/
+	width:1062px;
+	margin: 0 auto;
+}
+.area-quote {
 	width: 960px;
 	margin: 0 auto;
 }
 .area-transport {
-	width: 960px;
-	margin: -60px auto;
+	/*width: 960px;*/
+	width:1183px;
+	margin: -60px -48px;/*-60px auto*/
 }
 .area-header{
 	width: 960px;
@@ -112,6 +118,10 @@ div #logo-text {
     text-shadow: 2px 2px 2px rgba(143,0,0,0.4);
     font-family: Lucida Sans Unicode;
 }
+#logo-text a {
+			text-decoration: none;
+			color: inherit;
+}
 /** navigation **/
 #navigation {
 	background-position: right top;
@@ -191,8 +201,13 @@ p a:hover {
 	height: auto;
 	width: auto;
 }
+@-moz-document url-prefix() {
+    #adbox {
+			background-position: 294px -176px;
+		}
+}
 #adbox .area {
-	height: 531px;
+	height: 527px;
 	position: relative;
 }
 #adbox2 ul {
@@ -233,7 +248,8 @@ p a:hover {
 	display: inline-block;
 	float: left;
 	min-height: 110px;
-	width: 300px;
+	width:275px;
+	/*width: 300px;*/
   padding: 6px 10px 0;
 }
 .transport a {
@@ -580,7 +596,6 @@ p a:hover {
 }
 #footer {
     background: url(../images/bg-footer.png) repeat left top;
-    display: inline-block;
     width: 100%;
     padding: 7px 0;
     position: fixed;
@@ -588,7 +603,6 @@ p a:hover {
 }
 #quote-footer {
     background: url(../images/bg-footer.png) repeat left top;
-    display: inline-block;
     width: 100%;
     padding: 7px 0;
     position: fixed;
