--- a/Inter Custom Logistics/css/styles.css
+++ b/Inter Custom Logistics/css/styles.css
@@ -15,22 +15,22 @@
 }
 body {
 	background: url(../images/bg-body.png) repeat left top;
-	min-width: 960px;
 	margin: 0;
 }
 .area {
-	/*width: 960px;*/
-	width:1062px;
+	width: 960px;
 	margin: 0 auto;
+	position: relative;
+	top: -21px;
 }
 .area-quote {
 	width: 960px;
 	margin: 0 auto;
 }
 .area-transport {
-	/*width: 960px;*/
-	width:1183px;
-	margin: -60px -48px;/*-60px auto*/
+	width: 1180px;
+	margin: 0 auto;
+	display: table;
 }
 .area-header{
 	width: 960px;
@@ -49,7 +49,7 @@ img {
 	text-transform: uppercase;
 }
 /*------------------------------ Sprites ------------------------------*/
-#navigation, #navigation li.selected a, #navigation li a:hover, .quote h2, .index-quote h2, .blog h2, .frame, .heading1, .heading2, #services .list li {
+#navigation, #navigation li.selected a, #navigation li a:hover, .quote h2, .index-quote2 h2, .index-quote h2, .blog h2, .frame, .heading1, .heading2, #services .list li {
 	background: url(../images/interface.png) no-repeat;
 }
 .box, .box > div, .box > div > div {
@@ -102,25 +102,25 @@ img {
 }
 #logo img {
 	width: auto;
-  height: 88px;
-  position: relative;
-  top: -14px;
+	height: 88px;
+	position: relative;
+	top: -14px;
 }
 div #logo-text {
-    float: left;
-    line-height: 75px;
-    position: relative;
-    top: 25px;
-    padding-left: 25px;
-    font-size: 35px;
-    font-weight: bold;
-    color: #181E23;
-    text-shadow: 2px 2px 2px rgba(143,0,0,0.4);
-    font-family: Lucida Sans Unicode;
+	float: left;
+	line-height: 75px;
+	position: relative;
+	top: 25px;
+	padding-left: 25px;
+	font-size: 35px;
+	font-weight: bold;
+	color: #181E23;
+	text-shadow: 2px 2px 2px rgba(143,0,0,0.4);
+	font-family: Lucida Sans Unicode;
 }
 #logo-text a {
-			text-decoration: none;
-			color: inherit;
+	text-decoration: none;
+	color: inherit;
 }
 /** navigation **/
 #navigation {
@@ -151,10 +151,15 @@ div #logo-text {
 	background-position: left top;
 }
 /*------------------------------ CONTENTS ------------------------------*/
-#contents {
-	min-height: 1010px;
-	padding-top: 45px;
+#contents div.area:after {
+	clear:both;
+	content:"";
+	display:block;
+	height:1%;
+	line-height:0;
+	visibility:hidden;
 }
+
 #contents div.area:after {
 	clear:both;
 	content:"";
@@ -193,71 +198,77 @@ h3 a:hover, p a:hover {
 p a:hover {
 	text-decoration: underline;
 }
-/** adbox/transport **/
-#adbox {
-	background: url(../images/indexpic.jpg) no-repeat center top;
-	margin: -45px 0 30px;
-	background-position-y: -176px;
-	height: auto;
+/** banner/transport **/
+#banner {
+	background: url(../images/indexpic.jpg) no-repeat center center;
+	/* background-position-y: -251px; */
+	height: 50vw;
 	width: auto;
+	max-height: 500px;
+	background-size: auto 100%;
+}
+@media screen and (min-width:990px){
+	#banner {
+		background-size: 1225px;
+		background-position-y: -125px;
+	}
 }
 @-moz-document url-prefix() {
-    #adbox {
-			background-position: 294px -176px;
-		}
+	#banner {
+		background-position: 294px -176px;
+	}
 }
-#adbox .area {
+#banner .area {
 	height: 527px;
 	position: relative;
 }
-#adbox2 ul {
+#banner2 ul {
 	display: inline-block;
 	list-style: none;
-  margin: 0 0 -5px;
+	margin: 0 0 -5px;
 	padding: 0;
 	position: absolute;
 	bottom: 0;
 }
-#adbox2 ul li {
+#banner2 ul li {
 	float: left;
 	background: url(../images/separator.png) no-repeat left top;
 	min-height: 110px;
 	width: 300px;
 	padding: 0 8px 0 12px;
 }
-#adbox2 ul li:first-child {
+#banner2 ul li:first-child {
 	background: none;
 }
-#adbox2 ul li > div {
+#banner2 ul li > div {
 	background: url(../images/bg-adbox-feature.png) no-repeat center top;
 	padding: 10px 20px 0;
 }
-#adbox2 ul li > div h2 {
+#banner2 ul li > div h2 {
 	letter-spacing: 1px;
 }
-#adbox2 ul li > div p {
+#banner2 ul li > div p {
 	color: #2f2203;
 	letter-spacing: 1px;
 }
-#adbox2 ul li > div p a {
+#banner2 ul li > div p a {
 	color: #2f2203;
 	text-decoration: none;
 }
 .transport {
 	background: url(../images/bg-adbox-feature.png) no-repeat center top;
-	display: inline-block;
 	float: left;
-	min-height: 110px;
-	width:275px;
-	/*width: 300px;*/
-  padding: 6px 10px 0;
+	height: 75px;
+	width: 25%;
+	padding-top: 10px;
 }
 .transport a {
 	text-decoration: none;
 	color: black;
 }
 .area-transport h2 {
-	margin: 0px 30px 6px;
+	margin: 0 !important;
+	text-align: center;
 }
 /** section **/
 .section {
@@ -279,7 +290,7 @@ p a:hover {
 	background-position: -450px 0;
 	background-repeat: repeat-y;
 	padding: 1px 20px;
-	color: #000000; #important
+	color: #000000 !important;
 }
 /** box2 **/
 .box2 {
@@ -295,53 +306,73 @@ p a:hover {
 /** main **/
 .main {
 	float: left;
+	margin-top: 45px;
 	width: 600px;
-	margin: 7px 30px 0 10px;
 }
 /** quote **/
 .quote {
-  float: left;
-  width: 290px;
-  margin: -788px 10px 18px 164px;
+	float: left;
+	width: 290px;
+	margin: -788px 10px 18px 164px;
 }
 .index-quote {
-  float: left;
-  width: 290px;
-  margin: -97px 16px 52px 160px;
+	float: left;
+	width: 290px;
+	position: relative;
+	top: 85px;
+	left: -475px;
+}
+
+.index-quote2 {
+	float: left;
+	width: 290px;
+	margin: -54px 25px 55px 457px;
+	position: absolute;
 }
 #about .quote {
-    float: left;
-    width: 290px;
-    margin: -98px 10px 18px 164px;
-    display: block;
+	float: left;
+	width: 290px;
+	margin: -98px 10px 18px 164px;
+	display: block;
 }
 .quote h2 {
-  background-position: 0 -60px;
-  color: #fff;
-  font: 21px/35px 'Abel-Regular';
-  height: 35px;
-  letter-spacing: 1px;
-  width: 208px;
-  margin: 0 0 10px;
-  padding: 0 20px;
-  text-transform: uppercase;
+	background-position: 0 -60px;
+	color: #fff;
+	font: 21px/35px 'Abel-Regular';
+	height: 35px;
+	letter-spacing: 1px;
+	width: 208px;
+	margin: 0 0 10px;
+	padding: 0 20px;
+	text-transform: uppercase;
 }
 .index-quote h2 {
-  background-position: 0 -60px;
-  color: #fff;
-  font: 21px/35px 'Abel-Regular';
-  height: 35px;
-  letter-spacing: 1px;
-  width: 208px;
-  margin: 0 0 10px;
-  padding: 0 20px;
-  text-transform: uppercase;
+	background-position: 0 -60px;
+	color: #fff;
+	font: 21px/35px 'Abel-Regular';
+	height: 35px;
+	letter-spacing: 1px;
+	width: 208px;
+	margin: 0 0 10px;
+	padding: 0 20px;
+	text-transform: uppercase;
+}
+.index-quote2 h2 {
+	background-position: 0 -60px;
+	color: #fff;
+	font: 21px/35px 'Abel-Regular';
+	height: 35px;
+	letter-spacing: 1px;
+	width: 208px;
+	margin: 0 0 10px;
+	padding: 0 20px;
+	text-transform: uppercase;
 }
 /** blog **/
 .blog {
 	float: right;
 	width: 290px;
-	margin: 69px 10px 18px 20px;
+	margin-top: 45px;
 }
 .blog h2 {
 	background-position: 0 -60px;
@@ -362,7 +393,6 @@ p a:hover {
 }
 /** features **/
 #features {
-	margin: 70px 0 12px;
 }
 #features p {
 	padding: 0;
@@ -399,11 +429,11 @@ p a:hover {
 	padding-bottom: 42px;
 }
 #about img {
-    border-radius: 20px;
-    border: 1px solid #000000;
-    padding: 0px;
-    width: 120px;
-    height: 120px;
+	border-radius: 20px;
+	border: 1px solid #000000;
+	padding: 0px;
+	width: 120px;
+	height: 120px;
 }
 /** contact **/
 #contact p {
@@ -487,7 +517,7 @@ p a:hover {
 .pagination > ul {
 	display: inline-block;
 	list-style: none;
- *width: 330px;
+	*width: 330px;
 	margin: 0;
 	padding: 0;
 }
@@ -558,33 +588,33 @@ p a:hover {
 }
 /** Button **/
 .btn {
-  background: #F0F0EE;
-  background-image: -webkit-linear-gradient(top, #F0F0EE, #F2F2F0);
-  background-image: -moz-linear-gradient(top, #F0F0EE, #F2F2F0);
-  background-image: -ms-linear-gradient(top, #F0F0EE, #F2F2F0);
-  background-image: -o-linear-gradient(top, #F0F0EE, #F2F2F0);
-  background-image: linear-gradient(to bottom, #F0F0EE, #F2F2F0);
-  -webkit-border-radius: 28;
-  -moz-border-radius: 28;
-  border-radius: 28px;
-  text-shadow: 0px 1px 0px #ff0000;
-  font-family: Georgia;
-  color: #000000;
-  font-size: 16px;
-  padding: 5px 12px 5px 10px;
-  border: solid #000000 2px;
-  text-decoration: none;
+	background: #F0F0EE;
+	background-image: -webkit-linear-gradient(top, #F0F0EE, #F2F2F0);
+	background-image: -moz-linear-gradient(top, #F0F0EE, #F2F2F0);
+	background-image: -ms-linear-gradient(top, #F0F0EE, #F2F2F0);
+	background-image: -o-linear-gradient(top, #F0F0EE, #F2F2F0);
+	background-image: linear-gradient(to bottom, #F0F0EE, #F2F2F0);
+	-webkit-border-radius: 28;
+	-moz-border-radius: 28;
+	border-radius: 28px;
+	text-shadow: 0px 1px 0px #ff0000;
+	font-family: Georgia;
+	color: #000000;
+	font-size: 16px;
+	padding: 5px 12px 5px 10px;
+	border: solid #000000 2px;
+	text-decoration: none;
 	margin: -10px 25px;
 }
 
 .btn:hover {
-  background: #948d82;
-  background-image: -webkit-linear-gradient(top, #948d82, #ccbaba);
-  background-image: -moz-linear-gradient(top, #948d82, #ccbaba);
-  background-image: -ms-linear-gradient(top, #948d82, #ccbaba);
-  background-image: -o-linear-gradient(top, #948d82, #ccbaba);
-  background-image: linear-gradient(to bottom, #948d82, #ccbaba);
-  text-decoration: none;
+	background: #948d82;
+	background-image: -webkit-linear-gradient(top, #948d82, #ccbaba);
+	background-image: -moz-linear-gradient(top, #948d82, #ccbaba);
+	background-image: -ms-linear-gradient(top, #948d82, #ccbaba);
+	background-image: -o-linear-gradient(top, #948d82, #ccbaba);
+	background-image: linear-gradient(to bottom, #948d82, #ccbaba);
+	text-decoration: none;
 	cursor: pointer;
 }
 /*------------------------------ FOOTER ------------------------------*/
@@ -595,28 +625,28 @@ p a:hover {
 	padding: 7px 0;
 }
 #footer {
-    background: url(../images/bg-footer.png) repeat left top;
-    width: 100%;
-    padding: 7px 0;
-    position: fixed;
-    bottom: 0;
+	background: url(../images/bg-footer.png) repeat left top;
+	width: 100%;
+	padding: 7px 0;
+	position: fixed;
+	bottom: 0;
 }
 #quote-footer {
-    background: url(../images/bg-footer.png) repeat left top;
-    width: 100%;
-    padding: 7px 0;
-    position: fixed;
-    bottom: 0;
+	background: url(../images/bg-footer.png) repeat left top;
+	width: 100%;
+	padding: 7px 0;
+	position: fixed;
+	bottom: 0;
 }
 @media screen and (max-height: 710px) {
-    #footer {
-        display: none;
-    }
+	#footer {
+		display: none;
+	}
 }
 @media screen and (max-height: 855px) {
-    #quote-footer {
-        display: none !important;
-    }
+	#quote-footer {
+		display: none !important;
+	}
 }
 .divider {
 	background: url(../images/divider.png) no-repeat center top;
@@ -666,4 +696,11 @@ p a:hover {
 }
 #connect a.twitter {
 	background-position: 0 -120px;
+}
+.index-quote a {
+	text-decoration: none !important;
+}
+.footer-content {
+	width: 960px;
+	margin: 0 auto;
 }
