--- a/Inter Custom Logistics/css/mobile.css
+++ b/Inter Custom Logistics/css/mobile.css
@@ -1,8 +1,109 @@
 @media screen and (max-width:780px){
+    /*-------------------------menu css------------------------------*/
+    .menu {
+        position: relative;
+        display:  inline-block;
+        width: 30px;
+        height: 30px;
+    }
+    .menu span {
+        margin: 0 auto;
+        position: relative;
+        top: 12px;
+    }
+    .menu span:before, .menu span:after {
+        position: absolute;
+        content: '';
+    }
+    .menu span, .menu span:before, .menu span:after {
+        width: 30px;
+        height: 6px;
+        background-color: #93877E;
+        display: block;
+    }
+    .menu span:before {
+        margin-top: -12px;
+    }
+    .menu span:after {
+        margin-top: 12px;
+    }
+    .example5 span {
+        -webkit-transition-duration: 0s; transition-duration: 0s;
+        -webkit-transition-delay: 0.2s; transition-delay: 0.2s;
+    }
+    .example5.hover span {
+        background-color: rgba(0,0,0,0.0);
+        -webkit-transition-delay: 0.2s; transition-delay: 0.2s;
+    }
+    .example5 span:before {
+        -webkit-transition-property: margin, -webkit-transform; transition-property: margin, transform;
+        -webkit-transition-duration: 0.2s; transition-duration: 0.2s;
+        -webkit-transition-delay: 0.2s, 0s; transition-delay: 0.2s, 0s;
+    }
+    .example5.hover span:before {
+        margin-top: 0;
+        -webkit-transform: rotate(45deg); transform: rotate(45deg);
+        -webkit-transition-delay: 0s, 0.2s; transition-delay: 0s, 0.2s;
+    }
+    .example5 span:after {
+        -webkit-transition-property: margin, -webkit-transform; transition-property: margin, transform;
+        -webkit-transition-duration: 0.2s; transition-duration: 0.2s;
+        -webkit-transition-delay: 0.2s, 0s; transition-delay: 0.2s, 0s;
+    }
+    .example5.hover span:after {
+        margin-top: 0;
+        -webkit-transform: rotate(-45deg); transform: rotate(-45deg);
+        -webkit-transition-delay: 0s, 0.2s; transition-delay: 0s, 0.2s;
+    }
+    div#menu-button {
+        position: absolute;
+        right: 10px;
+        top: 15px;
+        display: block !important;
+    }
     ul#navigation {
-        display: none !important;
+        background: none;
+        margin: 0 !important;
+        padding: 0 !important;
     }
 
+    ul#navigation li {
+        width: 100% !important;
+        background: #93877E;
+        border-top: 2px solid #C5B9AF;
+        border-bottom: 2px solid #6F655D;
+    }
+
+    ul#navigation li.selected a {
+        background: none !important;
+    }
+
+    ul#navigation li a {
+        width:100%;
+        color: #F1AA00;
+        text-shadow: 0 1px black;
+        font-weight: bold;
+        font-size: 20px;
+    }
+    #navigation li a:hover {
+        background: none !important;
+    }
+    ul#navigation li:hover {
+        background-color: grey;
+    }
+    ul#navigation {
+        position: fixed;
+        top: 65px;
+        width: 100%;
+        right: -100%;
+        transition: all 500ms ease;
+    }
+    ul#navigation.show{
+        display: block !important;
+        right:0;
+
+    }
+    /*----------------------end of menu css------------*/
     div#logo-text {
         display: none !Important;
     }
@@ -22,9 +123,10 @@
         width:100% !important;
     }
     .index-quote {
-        top: 15px !important;
-        left: 10px !important;
+        top: 80px !important;
+        left: 5px !important;
         width: 250px !Important;
+        position: absolute !important;
     }
     .area-transport {
         width: 100% !important;
@@ -79,4 +181,5 @@
     .index-quote{
         /* display:none !important; */
     }
+
 }
