--- a/Inter Custom Logistics/css/mobile.css
+++ b/Inter Custom Logistics/css/mobile.css
@@ -152,6 +152,13 @@
       padding-top: 30px;
       width: 323px;
     }
+    #box-quote {
+      width: 367px;
+      padding-left: 10px;
+    }
+    #box-services {
+      width: 400px;
+    }
     .section {
       width: 338px;
     }
