--- a/simple-todos-master/simple-todos.css
+++ b/simple-todos-master/simple-todos.css
@@ -26,7 +26,7 @@ body {
 
 header {
   background: #d2edf4;
-  background-image: linear-gradient(to bottom, #EAD5C6, #1E2025 100%);
+  background-image: linear-gradient(to bottom, #FFFFFF, #1E2025 100%);
   padding: 20px 15px 15px 15px;
   position: relative;
 }
