--- a/MemeWars/style.css
+++ b/MemeWars/style.css
@@ -1,6 +1,28 @@
 body {
     background: #3f444a;
 }
+form { padding: 3px; width: 20%; }
+form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
+form button { width: 18%; background: rgb(255, 215, 70); border: none; padding: 10px; }
+#messages {
+    margin-left: 7px;
+    width: 217px;
+    top: 229px;
+    height: 33%;
+    position: fixed;
+    background: white;
+    padding-left: 0px;
+    list-style-position: inside;
+    overflow: hidden;
+    overflow-y: auto;
+    border: 5px #8c7b39 solid;
+}
+#messages li {
+    padding: 4px 6px;
+}
+#messages li:nth-child(odd) {
+  background: #eee;
+}
 /* User Menu CSS */
 div.turn-menu {
     width: 227px;
@@ -11,6 +33,10 @@ div.turn-menu {
     margin-right: 10px;
     /*margin-top: 130px;*/
 }
+div#turn-menu2 {
+    bottom: -72px;
+    position: relative;
+}
 .menu-row {
     background: #ffd746;
     text-align: center;
@@ -20,6 +46,7 @@ div.turn-menu {
     height: 27px;
     margin-bottom: 11px;
     line-height: 27px;
+    cursor: pointer;
 }
 /* Hero Card CSS */
 div.card {
