--- a/MemeWars/style.css
+++ b/MemeWars/style.css
@@ -1,11 +1,20 @@
 body {
     background: #3f444a;
     /*background-image: url("http://jojud265nia2bj9sy4ah9b61.wpengine.netdna-cdn.com/wp-content/uploads/2015/07/The-Sound-of-Music-1600x900-c-default.jpg");
-    background-size: cover;*/
+      background-size: cover;
+    */
+    background-image: url("http://cdn0.dailydot.com/cache/e1/9a/e19a26d81898cfa008821ec8c5cb3c10.jpg");
+    background-size: stretch;
 }
 form { padding: 3px; width: 20%; }
 form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
 form button { width: 18%; background: rgb(255, 215, 70); border: none; padding: 10px; }
+.gray {
+    -moz-filter: grayscale(100%);
+    -webkit-filter: grayscale(100%);
+    filter: gray; /* IE6-9 */
+    filter: grayscale(100%);
+}
 #messages {
     margin-left: 7px;
     width: 217px;
@@ -53,7 +62,7 @@ div#turn-menu2 {
 div.menu-row img {
     width: 8%;
 }
-.disabled {
+.disabled div {
     opacity: 0.6;
     cursor: not-allowed;
 }
